@@ -309,6 +309,16 @@ DEFAULT_TRANSPORT = 'obfs4'
 #   Accept-Language,[Kk]lingon
 BLACKLISTED_REQUEST_HEADERS_FILE="blacklisted-request-headers.csv"
 
+# List of tuples that specify blacklisted tor version ranges.  The first
+# element marks the start of the range and the second element marks the end.
+# Both the start *and* the end version are blocked too.  If you want to block a
+# single version, have the start and end range be identical.  BridgeDB won't
+# distribute bridges whose version falls within any version ranges.
+BLACKLISTED_TOR_VERSIONS = [
+    ('0.3.4', '0.3.4.9'), # See <https://bugs.torproject.org/29184>.
+    ('0.3.5', '0.3.5.6')
+]
+
 # Decoy bridges that we are handing out to bots that we detected using the
 # regular expressions in BLACKLISTED_REQUEST_HEADERS_FILE.  The CSV file must
 # have the following format:
